{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 13,
  "lineage": "46a6ebcd-1532-94ec-fd06-21f2391c961f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03edc4f1ab7733a5f",
            "arn": "arn:aws:ec2:us-east-1:654654423131:elastic-ip/eipalloc-03edc4f1ab7733a5f",
            "association_id": "eipassoc-0c071cff93d701eec",
            "domain": "vpc",
            "id": "eipalloc-03edc4f1ab7733a5f",
            "instance": "i-0709c6f3db0ab868e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-077899acc0c577f37",
            "private_dns": "ip-172-31-16-6.ec2.internal",
            "private_ip": "172.31.16.6",
            "public_dns": "ec2-3-216-12-202.compute-1.amazonaws.com",
            "public_ip": "3.216.12.202",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "bastion-eip"
            },
            "tags_all": {
              "Name": "bastion-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.Bastion1",
            "aws_security_group.all",
            "aws_security_group.http",
            "aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:654654423131:instance/i-0709c6f3db0ab868e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0709c6f3db0ab868e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-077899acc0c577f37"
              }
            ],
            "primary_network_interface_id": "eni-077899acc0c577f37",
            "private_dns": "ip-172-31-16-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.16.6",
            "public_dns": "ec2-54-82-179-65.compute-1.amazonaws.com",
            "public_ip": "54.82.179.65",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03b255e389d9b6584",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "all-demo-bastion",
              "http-demo-bastion",
              "ssh-demo-bastion"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4de963f213350de",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-003728f13166fee96",
              "sg-0b9cf6aa5278287e6",
              "sg-0c2ad353345a3fa56"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "i-0709c6f3db0ab868e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.all",
            "aws_security_group.http",
            "aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-0c2ad353345a3fa56",
            "description": "Allow All traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2ad353345a3fa56",
            "ingress": [],
            "name": "all-demo-bastion",
            "name_prefix": "",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-0c2ad353345a3fa56",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-0b9cf6aa5278287e6",
            "description": "Allow HTTP traffic",
            "egress": [],
            "id": "sg-0b9cf6aa5278287e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http-demo-bastion",
            "name_prefix": "",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-0b9cf6aa5278287e6",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group/sg-003728f13166fee96",
            "description": "Allow SSH traffic",
            "egress": [],
            "id": "sg-003728f13166fee96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 20,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20
              }
            ],
            "name": "ssh-demo-bastion",
            "name_prefix": "",
            "owner_id": "654654423131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-085aae727fbfc39c5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sg-003728f13166fee96",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-0ef27bfcb7e5d2194",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ef27bfcb7e5d2194",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0c2ad353345a3fa56",
            "security_group_rule_id": "sgr-0ef27bfcb7e5d2194",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-0ef27bfcb7e5d2194",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-0d21877f008cafc71",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0d21877f008cafc71",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0b9cf6aa5278287e6",
            "security_group_rule_id": "sgr-0d21877f008cafc71",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-0d21877f008cafc71",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654423131:security-group-rule/sgr-0f906eeac3a91a0e2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 20,
            "id": "sgr-0f906eeac3a91a0e2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-003728f13166fee96",
            "security_group_rule_id": "sgr-0f906eeac3a91a0e2",
            "tags": null,
            "tags_all": {},
            "to_port": 20
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "654654423131",
            "id": "sgr-0f906eeac3a91a0e2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ssh"
          ]
        }
      ]
    }
  ]
}